--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,19 +53,24 @@
     <UnityVersion>2020.2.1f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Scripts\AvoidableObjects\CavePixel.cs" />
     <Compile Include="Assets\Scripts\Unused\BlockController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\AvoidableObjects\Blocker.cs" />
     <Compile Include="Assets\Scripts\UIManager.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\GameStatistics.cs" />
+    <Compile Include="Assets\Scripts\AvoidableObjects\AvoidableObject.cs" />
     <Compile Include="Assets\Scripts\PooledObject.cs" />
     <Compile Include="Assets\Scripts\Turret.cs" />
+    <Compile Include="Assets\Scripts\AvoidableObjects\ScoreCanvas.cs" />
     <Compile Include="Assets\Scripts\PoolManager.cs" />
     <Compile Include="Assets\Scripts\DrawCaveWall.cs" />
-    <Compile Include="Assets\Scripts\GameStatistics.cs" />
-    <Compile Include="Assets\Scripts\AvoidableObjects\Blocker.cs" />
-    <Compile Include="Assets\Scripts\AvoidableObjects\AvoidableObject.cs" />
-    <Compile Include="Assets\Scripts\AvoidableObjects\ScoreCanvas.cs" />
+    <Compile Include="Assets\Scripts\Post_Blocker.cs" />
+    <Compile Include="Assets\RigidbodyExt.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
